--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ repositories {
 		name = "CottonMC"
 		url = "https://server.bbkr.space/artifactory/libs-release"
 	}
+
+	maven {
+		name 'Xander Maven'
+		url 'https://maven.isxander.dev/releases'
+	}
 }
 
 fabricApi {
@@ -40,7 +45,8 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
 
-	modImplementation("io.github.cottonmc:LibGui:12.0.1+1.21.2")
+	modImplementation "io.github.cottonmc:LibGui:12.0.1+1.21.2"
+	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
 }
 
 processResources {
