--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-# Done to increase the memory available to gradle.
+# Done to increase the memory available to Gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
@@ -10,10 +10,10 @@ loader_version=0.16.10
 fabric_kotlin_version=1.13.1+kotlin.2.1.10
 
 # Mod Properties
-mod_version=1.0.1-BETA
+mod_version=1.0.1-RELEASE
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
 # Dependencies
 fabric_version=0.118.0+1.21.4
-yacl_version=3.6.1+1.21.2-fabric
+owo_version=0.12.20+1.21.4
