(v1.0.2-RELEASE) Added Plugin Support, Fixed Naming Conventions, and Added Temporary FancyMenu (Essential Mod soon) support

--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,20 @@
 plugins {
-	id 'fabric-loom' version '1.10-SNAPSHOT'
-	id 'maven-publish'
-	id 'checkstyle'
+	id 'org.jetbrains.kotlin.jvm' version '2.1.20-RC2'
+	id('fabric-loom') version '1.10-SNAPSHOT'
+	id('maven-publish')
+	id('checkstyle')
 }
 
 def generatedVersionDir = layout.buildDirectory.dir("generated-version")
 
-version = project.mod_version
-group = project.maven_group
+version(project.mod_version)
+group(project.maven_group)
 
 base {
 	archivesName = project.archives_base_name
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
-
 	maven {
 		name = "CottonMC"
 		url = "https://server.bbkr.space/artifactory/libs-release"
@@ -44,27 +39,40 @@ fabricApi {
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation include("net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}")
 
 	modImplementation include("io.github.cottonmc:LibGui:12.0.1+1.21.2")
 
-	modCompileOnly files("libs/BetterF3-13.0.0-Fabric-1.21.4.jar")
+	modCompileOnly("flatdir:betterf3_fabric_MC_1.21.4:13.0.0")
+	modCompileOnly("flatdir:fancymenu_fabric_MC_1.21.4:3.4.6")
+	modCompileOnly("flatdir:konkrete_fabric_MC_1.21.4:1.9.9")
 
 	modImplementation "io.wispforest:owo-lib:${project.owo_version}"
 	include "io.wispforest:owo-sentinel:${project.owo_version}"
 	annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+	modImplementation include("io.wispforest:owo-lib:${project.owo_version}")
+
+	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.1")))
 
 	// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
 	implementation include("com.squareup.okhttp3:okhttp:5.0.0-alpha.14")
 	// https://mvnrepository.com/artifact/com.squareup.okio/okio
 	implementation include("com.squareup.okio:okio:3.10.2")
+	// https://mvnrepository.com/artifact/com.puppycrawl.tools/checkstyle
+	implementation include("com.puppycrawl.tools:checkstyle:10.21.4")
+
+	// https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib-jdk8
+	implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.20-RC2'
+
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	include(compileOnly(annotationProcessor("org.projectlombok:lombok:1.18.36")))
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	include(testCompileOnly(testAnnotationProcessor("org.projectlombok:lombok:1.18.36")))
 }
 
 processResources {
@@ -81,13 +89,12 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.register('generateVersionProperties') {
 	doLast {
-		def propertiesFile = generatedVersionDir.get().file("version.properties").asFile
+		def propertiesFile = generatedVersionDir.get().file("mcversionrenamer.version.properties").asFile
 		propertiesFile.parentFile.mkdirs()
 
 		def properties = new Properties()
 		properties.setProperty("version", project.version.toString())
 
-		// Use FileWriter to write to the file
 		propertiesFile.withWriter { writer ->
 			properties.store(writer, null)
 		}
@@ -98,11 +105,27 @@ tasks.named("processResources") {
 	dependsOn generateVersionProperties
 }
 
+processResources {
+	filesMatching(['**/*.json']) {
+		expand([version: version])
+	}
+}
+
+checkstyle {
+	toolVersion = '10.21.4'
+	config = resources.text.fromFile('config/checkstyle/checkstyle.xml')
+	maxErrors = 0
+}
+
 java {
 	withSourcesJar()
 
 	sourceCompatibility = JavaVersion.VERSION_21
 	targetCompatibility = JavaVersion.VERSION_21
+
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
 }
 
 sourceSets {
@@ -119,7 +142,6 @@ jar {
 	}
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		create("mavenJava", MavenPublication) {
