--- a/mcvr_1215/gradle.properties
+++ b/mcvr_1215/gradle.properties
@@ -20,6 +20,9 @@ archives_base_name=mcversionrenamer
 # Dependencies
 ##fabric_version=0.118.0+1.21.4
 fabric_version=0.119.5+1.21.5
-owo_version=0.12.20+1.21.4
+## owo_version=0.12.20+1.21.4
+owo_version=0.12.15.1+1.21
 libgui_version=13.0.0+1.21.5
 ## libgui_version=12.0.1+1.21.2
+yacl_version=3.6.6+1.21.5-fabric
+mod_menu_version=14.0.0-rc.2
