--- a/mcvr_1214/gradle.properties
+++ b/mcvr_1214/gradle.properties
@@ -12,8 +12,8 @@ loader_version=0.16.10
 fabric_kotlin_version=1.13.2+kotlin.2.1.20
 
 # Mod Properties
-version=1.0.3-ALPHA
-mod_version=1.0.3-ALPHA
+version=1.0.3-BETA
+mod_version=1.0.3-BETA
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
