--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,42 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+# This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
+# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: build
-on: [pull_request, push]
+name: Gradle Package
+
+on:
+  [push, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: validate gradle wrapper
-        uses: gradle/actions/wrapper-validation@v4
-      - name: setup jdk
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4.2.0
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.4.0
         with:
-          java-version: '21'
-          distribution: 'microsoft'
-      - name: make gradle wrapper executable
-        run: chmod +x ./gradlew
-      - name: build
+          java-version: '24'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4.1.0
+
+      - name: Run build
         run: ./gradlew build
-      - name: capture build artifacts
-        uses: actions/upload-artifact@v4
+
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.4.0
         with:
-          name: Artifacts
-          path: build/libs/
+          path: /home/runner/work/MCVersionRenamer/MCVersionRenamer/build/libs/**.jar
