--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,14 @@ jobs:
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4.1.0
 
+      - name: Grant execute permission to Gradle Wrapper
+        run: chmod +x gradlew
+
       - name: Run build
         run: ./gradlew build
-
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.4.0
