--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4.2.0
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4.4.0
         with:
-          java-version: '24'
+          java-version: '21'
           distribution: 'temurin'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          server-id: github
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
       - name: Setup Gradle
