--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,17 @@ jobs:
       - name: Run build
         run: ./gradlew build
 
-      - name: Upload a Build Artifact
+      - name: Upload Root Build Artifact
         uses: actions/upload-artifact@v4.4.0
         with:
           path: /home/runner/work/MCVersionRenamer/MCVersionRenamer/build/libs/**.jar
+
+      - name: Upload 1_21_4 Build Artifact
+        uses: actions/upload-artifact@v4.4.0
+        with:
+          path: /home/runner/work/MCVersionRenamer/MCVersionRenamer/mcvr_1214/build/libs/**.jar
+
+      - name: Upload 1_21_5 Build Artifact
+        uses: actions/upload-artifact@v4.4.0
+        with:
+          path: /home/runner/work/MCVersionRenamer/MCVersionRenamer/mcvr_1215/build/libs/**.jar
