--- a/mcvr_1214/gradle.properties
+++ b/mcvr_1214/gradle.properties
@@ -12,8 +12,8 @@ loader_version=0.16.10
 fabric_kotlin_version=1.13.2+kotlin.2.1.20
 
 # Mod Properties
-version=1.0.3-BETA
-mod_version=1.0.3-BETA
+version=1.0.3-RELEASE
+mod_version=1.0.3-RELEASE
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
@@ -23,3 +23,6 @@ fabric_version=0.118.0+1.21.4
 owo_version=0.12.20+1.21.4
 ## libgui_version=13.0.0+1.21.5
 libgui_version=12.0.1+1.21.2
+yacl_version=3.6.6+1.21.4-fabric
+modmenu_version=13.0.3
+modmenu_badges_lib_version=2023.6.1
