--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
 # Project Properties
-version=1.0.3-SNAPSHOT
-mod_version=1.0.3-SNAPSHOT
+version=1.0.3-RELEASE
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
+
+# Dependency Properties
+slf4j_version=2.0.16
+logback_version=1.5.18
+orgjson_version=20250107
