--- a/mcvr_1214/build.gradle
+++ b/mcvr_1214/build.gradle
@@ -25,7 +25,13 @@ repositories {
         url = "https://maven.terraformersmc.com/"
     }
 
+    maven {
+        name 'Xander Maven'
+        url 'https://maven.isxander.dev/releases'
+    }
+
     maven { url 'https://maven.wispforest.io/releases/' }
+    maven { url "https://api.modrinth.com/maven" }
 
     flatDir {
         dirs 'libs'
@@ -52,10 +58,9 @@ dependencies {
     modCompileOnly("flatdir:fancymenu_fabric_MC_1.21.4:3.4.6")
     modCompileOnly("flatdir:konkrete_fabric_MC_1.21.4:1.9.9")
 
-    modImplementation "io.wispforest:owo-lib:${project.owo_version}"
-    include "io.wispforest:owo-sentinel:${project.owo_version}"
-    annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
-    modImplementation include("io.wispforest:owo-lib:${project.owo_version}")
+    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modImplementation("maven.modrinth:modmenu-badges-lib:${project.modmenu_badges_lib_version}")
 
     include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.1")))
 
@@ -77,9 +82,13 @@ dependencies {
 
 processResources {
     inputs.property "version", project.version
+    inputs.property "minecraft_version", project.findProperty("minecraft_version")
 
-    filesMatching("fabric.mod.json") {
-        expand "version": inputs.properties.version
+    filesMatching(["fabric.mod.json", "version.json"]) {
+        expand(
+                "version": inputs.properties["version"],
+                "minecraft_version": inputs.properties["minecraft_version"]
+        )
     }
 }
 
