--- a/mcvr_1215/build.gradle
+++ b/mcvr_1215/build.gradle
@@ -84,9 +84,13 @@ dependencies {
 
 processResources {
     inputs.property "version", project.version
+    inputs.property "minecraft_version", project.findProperty("minecraft_version")
 
-    filesMatching("fabric.mod.json") {
-        expand "version": inputs.properties.version
+    filesMatching(["fabric.mod.json", "version.json"]) {
+        expand(
+                "version": inputs.properties["version"],
+                "minecraft_version": inputs.properties["minecraft_version"]
+        )
     }
 }
 
