--- a/mcvr_1215/gradle.properties
+++ b/mcvr_1215/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.16.10
 fabric_kotlin_version=1.13.2+kotlin.2.1.20
 
 # Mod Properties
-version=1.0.3-BETA
-mod_version=1.0.3-BETA
+version=1.0.3-RELEASE
+mod_version=1.0.3-RELEASE
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
