(v1.0.4-SNAPSHOT) Added a config option to customize the splash text on the title screen. Revamped the version text config for better flexibility. Also fixed some bugs and cleaned up Gradle dependencies.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project Properties
-version=1.0.3-RELEASE
+version=1.0.4-SNAPSHOT
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
