--- a/mcvr_1214/gradle.properties
+++ b/mcvr_1214/gradle.properties
@@ -12,17 +12,19 @@ loader_version=0.16.10
 fabric_kotlin_version=1.13.2+kotlin.2.1.20
 
 # Mod Properties
-version=1.0.3-RELEASE
-mod_version=1.0.3-RELEASE
+version=1.0.4-SNAPSHOT
+mod_version=1.0.4-SNAPSHOT
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
 # Dependencies
 fabric_version=0.118.0+1.21.4
-## fabric_version=0.119.5+1.21.5
 owo_version=0.12.20+1.21.4
-## libgui_version=13.0.0+1.21.5
 libgui_version=12.0.1+1.21.2
 yacl_version=3.6.6+1.21.4-fabric
 modmenu_version=13.0.3
 modmenu_badges_lib_version=2023.6.1
+betterf3_version=13.0.0
+fancymenu_version=3.5.0-1.21.4-fabric
+konkrete_version=1.9.9-1.21.4-fabric
+melody_version=1.0.10-1.21-fabric
