--- a/mcvr_1215/gradle.properties
+++ b/mcvr_1215/gradle.properties
@@ -6,22 +6,23 @@ org.gradle.parallel=true
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.5
 yarn_mappings=1.21.5+build.1
-loader_version=0.16.10
+loader_version=0.16.14
 fabric_kotlin_version=1.13.2+kotlin.2.1.20
 
 # Mod Properties
-version=1.0.3-RELEASE
-mod_version=1.0.3-RELEASE
+version=1.0.4-SNAPSHOT
+mod_version=1.0.4-SNAPSHOT
 maven_group=com.kyfstore.mcversionrenamer
 archives_base_name=mcversionrenamer
 
 # Dependencies
-fabric_version=0.119.5+1.21.5
+fabric_version=0.126.0+1.21.5
 owo_version=0.12.15.1+1.21
 libgui_version=13.0.0+1.21.5
 yacl_version=3.6.6+1.21.5-fabric
 modmenu_version=14.0.0-rc.2
-modmenu_badges_lib_version=2023.6.1
-betterf3_version=13.0.0
-fancymenu_version=3.4.6-1.21.4-fabric
-konkrete_version=1.9.9-1.21.4-fabric
+modmenu_badges_lib_version=2025.4.1
+betterf3_version=14.0.0
+fancymenu_version=3.5.1-1.21.5-fabric
+konkrete_version=1.9.11-1.21.5-fabric
+melody_version=1.0.11-1.21.5-fabric
